
[package]
authors = ["Dominik Biedebach <dominik@bdbch.com>"]
edition = "2024"
name = "oxrls"
version = "1.0.0-alpha.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oxrls"
path = "src/main.rs"

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
glob = "0.3"
walkdir = "2"
anyhow = "1"
thiserror = "2"
inquire = "0.7"
rand = "0.8"
indexmap = { version = "2", features = ["serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
